--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
   "require": {
-    "doctrine/orm": "3.5.3",
-    "doctrine/dbal": "^4.3",
+    "doctrine/orm": "^2.0",
+    "doctrine/dbal": "^3.0",
     "symfony/cache": "^7.3",
-    "doctrine/common": "^3.5"
+    "doctrine/common": "^3.0"
   },
   "autoload": {
     "psr-4": {
